--- a/style.css
+++ b/style.css
@@ -1,19 +1,22 @@
 body{
     margin: auto;
+    
     background-color: black;
     background-image: url(https://www.wallpaperflare.com/static/436/228/997/movies-mad-max-the-dark-knight-interstellar-movie-wallpaper.jpg);
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
 .all-content{
-padding: 8px 10%;
+padding:0px 10%;
+
 }
 /* ==================NAVBAR====================== */
 nav{
     display:flex;
     justify-content: center;
-    
+    padding:15px;
+    margin-top: 0px;
     background-color: black;
     font-size: 1.2rem;
 }
@@ -55,7 +58,7 @@ nav{
     border-left: 3px solid rgb(78, 139, 223);
     padding-left:10% ;
     border-radius: 2px;
-    color: white;
+    color: red;
     text-decoration: none;
 }
 
@@ -63,23 +66,18 @@ nav{
     padding-right: 10px;
 }
 
-/* #sign-in-btn{
-    background-color: rgba(151, 232, 59, 0.738);
-    padding:4px 10px;
-    margin-left: 10px;
-    border-radius: 50px;
-    font-size: 1.05rem;
-} */
+
 
 /* ==========================RESPONSIVENESS OF NAVBAR======================== */
 
 
-@media screen  and (min-width:768px){
+
     .search-bar{
         display: flex;
         justify-content: center;
         height:30px;
         width: 300px;
+        margin-left:3%;
     }
 
     
@@ -127,9 +125,9 @@ nav{
 
   
     
-}
 
-@media screen and (max-width:425px) {
+
+@media screen and (max-width:1024px) {
     .menu{
         order: -1;
     }
@@ -138,11 +136,49 @@ nav{
     }
 }
 
+@media screen and (max-width:768px){
+    .all-content{
+        padding:0px;
+    }
+}
+
+@media screen and (max-width:426px){
+    .nav-section-2{
+        flex-direction: row-reverse;
+    }
+.fa-heart{
+    display: none;
+    align-self: flex-end;
+}
+
+.favorites{
+    border-left:none;
+    align-self: flex-end;
+    margin-left: 0px;
+    padding-left: 0px;
+    margin-right: 10px;
+}
+#fav-text{
+    display: none;
+}
+#language-change{
+    display: none;
+}
+
+.nav-section-2{
+    width: 20%;
+    justify-content: space-between;
+    align-items: center;
+    align-self: flex-end;
+}
+
+}
 /* --------search results-------- */
 #search-result-text{
     color: white;
     font-size: 2.5rem;
     display: none;
+    text-align: center;
 }
 
 
