--- a/Favorites/favorites.css
+++ b/Favorites/favorites.css
@@ -8,10 +8,20 @@ h1{
     border-color: red;
     border-style: solid;
     padding-left: 10px;
-background-color: rgba(131, 55, 55, 0.466);
-font-size: 2.5rem;
-margin-top: 0px;
+    font-size: 2.5rem;
+    margin-top: 0px;
+    display: flex;
+    justify-content: space-between;
+}
 
+h1 a{
+    text-decoration: none;
+    color: rgb(90, 124, 217);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 1.8rem;
+    padding:10px;
+    font-weight: 400;
+    
 }
 
 .all-items{
@@ -19,13 +29,10 @@ margin-top: 0px;
     flex-wrap: wrap;
     margin-top: 10px;
 }
+
 img{
-   
     height:260px;
     width:181.8px;
-    
-
-   
 }
 
 img:hover{
@@ -39,6 +46,8 @@ img:hover{
     position: relative;
 
 }
+
+
 #title{
    
     color:white;
