--- a/Movie-info/movie-info-page.css
+++ b/Movie-info/movie-info-page.css
@@ -33,6 +33,8 @@ padding-top: 20px;
 }
 
 .movie-info{
+    display: flex;
+    justify-content: space-between;
     color: white;
     font-weight: 700;
     border-left: 3px solid red;
@@ -40,9 +42,18 @@ padding-top: 20px;
     margin-left: 10px;
     padding-left: 20px;
     font-size: 2.5rem;
-    
-    
 }
+
+.movie-info  a{
+        text-decoration: none;
+        color: rgb(90, 124, 217);
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        font-size: 1.8rem;
+        padding:10px;
+        font-weight: 400;
+    }
+
+
 .all-details{
     margin: 0px 10%;
     display: flex;
